<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:clickable="true"
    android:focusable="true"
    android:padding="14dp">

    <ImageView
        android:id="@+id/iconDetailPembeli"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitleBahanPembeli"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingEnd="0dp"
        android:text="@string/title_jadi"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/iconDetailPembeli"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvHargaBahanPembeli"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingEnd="0dp"
        android:text="@string/harga_bahan_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iconDetailPembeli"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleBahanPembeli" />

    <TextView
        android:id="@+id/tvSubTotalPembeli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingEnd="0dp"
        android:text="@string/subtotal_bahan_detail"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iconDetailPembeli"
        app:layout_constraintTop_toBottomOf="@+id/tvHargaBahanPembeli" />

    <TextView
        android:id="@+id/tvJmlhPembeli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jumlah_bahan_detail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHargaBahanPembeli" />

</android.support.constraint.ConstraintLayout>