<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog_checkout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    tools:context=".ui.produk.DialogCheckout">

    <TextView
        android:id="@+id/tvCheckoutDialog"
        style="@style/AppTheme.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxEms="20"
        android:maxLines="1"
        android:paddingBottom="8dp"
        android:text="@string/title_checkout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/lineTitle"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/shadow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCheckoutDialog"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tlNameBuyer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineTitle">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edtNameBuyer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name_buyer"
            android:imeOptions="actionGo|actionSend"
            android:inputType="textPersonName|textCapWords" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tvTotalPembayaran"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/harga_produk"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tlNameBuyer" />

    <Button
        android:id="@+id/btnCancel"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancel_cart"
        android:textColor="@color/greyDisabled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btnSimpanPembelian"
        app:layout_constraintTop_toBottomOf="@+id/tlNameBuyer" />

    <Button
        android:id="@+id/btnSimpanPembelian"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_simpan_checkout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tlNameBuyer" />

</android.support.constraint.ConstraintLayout>